Code comments (#101)
* chore: document AT-API, ATPlayer and ATFloodgatePlayer

* chore: clarify existing code

* chore: annotations

* chore: use the home object created and call HomePostCreateEvent

* chore: change UUID handling

* chore: don't call ATTeleportEvent when it's initialised

* chore: extra misc changes i forgot to commit oops

* chore: more code comments

* chore: more annotations

* feat: add player and timed commands

* chore: change to enhanced switches

* chore: separate signs into their own classes

* chore: cleanup general code

* chore: remove deprecated item byte code

* chore: last-minute cleanup

* refractor: Some fixes and cleanup (#98)

* fix: gitignore

* fix(deps): actually add player particles dependency

* refactor(gradle): add minix catalog for libs

* chore(gradle): Update to 7.6

* fix: ClassCastException

* fix: ClassNotFoundException

It seems just having an import for floodgate was causing an error, why? I have no clue but this immediately fixed it

* fix: ArrayIndexOutOfBoundsException

* refactor: Add max attempts to region check

* fix: Incorrect return types

* refactor(gradle): Change build dir for subprojects

* fix: Use interface

* refactor: Better error handling

* fix: Incoming ClassNotFoundException because of floodgate

* refactor: Cleanup some more commands and also fix some incorrect handling of futures

* chore: Update lands hook

* refactor: Remove deprecated methods

* fix: Return failed future instead of throwing

* refactor: Cleanup the API

Adds annotations for nullability, finals for parameters and some other cleanup

* fix: Remove arrow lib

* feat: Slimjar for runtime dependency resolution

* chore: Merge gradle changes from minimessage branch

* fix: update gradle stuff

* refactor: Remove exceptions that aren't possibly thrown

* refactor: Return Immutable copies of maps

* refactor: No longer need to check for 1.7

* ref